--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         }
     ],
     "require": {
-        "laravelcollective/html": "^5.6|^6.0|^7.0",
+        "php": "^8.0",
+        "laravelcollective/html": "^6.4",
         "laraeast/laravel-locales": "^3.3"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.3|^6.0",
+        "orchestra/testbench": "^7.0",
         "mockery/mockery": "^1.4"
     },
     "autoload": {
