--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": "^8.0",
         "laravelcollective/html": "^6.4",
+        "laravel/framework": "^8.0|^9.0|^10.0|^11.0",
         "laraeast/laravel-locales": "^3.3"
     },
     "require-dev": {
